Fixed preview on small screens

--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -213,6 +213,9 @@ header {
 			@media screen and (max-width: 800px) {
 				max-height: 60vw;
 			}
+			@media screen and (max-width: 550px) {
+				max-height: 85vw;
+			}
 		}
 		img.arrow_right {
 			height: 580px;
